--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <p1 style="text-align:center;"> 
     <p>ETHIOPIA KAYON MOUNTAIN</p>
     <p>Shakoso, East Guji, Oromia</p>
-    <p>Process: Washed</p>
+    <p>Process: Natural</p>
     <p>Taste Notes: Strawberry and lime with milk chocolate</p>
     <p></p>
     <p>TOM COFFEE</p>
